# lacuna

./: .actrc  .dockerignore  .envrc  .gitignore  DEVELOPMENT.md  Dockerfile  Dockerfile.production  FIX_SUMMARY.md  FLNM_MEMORY_EFFICIENT.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_NOTES.md  IMPLEMENTATION_SUMMARY.md  MANIFEST.in  Makefile  README.md  TASKS.md  TEMPLATES_READY.md  TEMPLATE_IMPLEMENTATION_SUMMARY.md  TEST_SUITE_OPTIMIZATION_PLAN.md  VECTORIZED_BATCH_PROCESSING.md  docker-compose.yml  lacuna.def  mkdocs.yml  plan-phase2.md  pyproject.toml  test_batch_flnm.py  test_cross_space_transform.py  test_flnm_manual.py  test_target_space.py
.github/: copilot-instructions.md
.github/workflows/: docker-publish.yml  docs.yml  local-clean.yml  local-format.yml  local-test-fast.yml  pre-commit.yml  release.yml  test.yml  tests.yml
.specify/memory/: constitution.md
docs/: 4D_ATLAS_SUPPORT.md  MEMORY_OPTIMIZATION_ANALYSIS.md  MEMORY_OPTIMIZATION_QUICK_REF.md  MEMORY_OPTIMIZATION_SUMMARY.md  SUMMARY.md  asset_management_summary.md  atlas_to_parcellation_refactoring.md  batch_timing.md  gen_ref_pages.py  index.md  memory_management.md  migration_guide.md  space_handling_guide.md  templates.md  testing_strategy.md  unified_containers.md
docs/developer_guide/: analysis_template.py  creating_analysis_modules.md  manual_testing.md
docs/explanation/: analyze.md  coordinate-spaces.md  index.md  mask-data.md  registries.md  subject-data.md
docs/how-to/: apptainer.md  batch-processing.md  docker.md  export-bids.md  fetch-connectomes.md  index.md  installation.md  regional-damage.md  run-flnm.md  run-slnm.md  setup-mrtrix3.md  templateflow.md
docs/reference/: index.md
docs/reference/api/: index.md
docs/reference/cli/: bids-apps.md  fetch.md  index.md
docs/stylesheets/: extra.css
docs/tutorials/: first-analysis.md  getting-started-api.ipynb  getting-started-cli.ipynb  getting-started-guide.md  getting-started.ipynb  getting-started.md  index.md
examples/: README.md  api_demo_v0.5.ipynb  batch_processing_example.py  demo_target_space.py  space_transformation_demo.py  test_cross_space_transform.py  test_target_space.py
notebooks/: flnm_comprehensive_tutorial.ipynb  test_atlas_analysis.ipynb  test_batch_processing.ipynb  test_flnm_comprehensive.ipynb  test_structural_network_mapping.ipynb
notebooks/examples/: demo_logging_and_repr.ipynb  test_structural_lesion_network_mapping.py
scripts/: replace_old_space_format.py
scripts/dev/: setup_dev_environment.sh
specs/001-core-package/: spec.md
specs/001-core-package/checklists/: requirements.md
specs/003-package-optimization/: tasks.md
src/lacuna/: __init__.py  __main__.py
src/lacuna/analysis/: __init__.py  atlas_aggregation.py  base.py  functional_network_mapping.py  parcel_aggregation.py  regional_damage.py  registry.py  structural_network_mapping.py
src/lacuna/assets/: __init__.py  base.py
src/lacuna/atlas/: __init__.py  aggregation.py  loader.py  registry.py
src/lacuna/batch/: __init__.py  api.py  extract.py  selection.py  strategies.py
src/lacuna/cli/: __init__.py  config.py  default_config.yaml  fetch_cmd.py  main.py  parser.py
src/lacuna/core/: __init__.py  (+11 more)
src/ldk/: __init__.py
tests/: conftest.py
tests/benchmarks/: __init__.py  test_fnm_performance.py
tests/contract/: test_analyze_api.py  test_atlas_aggregation_contract.py  test_atlas_registry_contract.py  test_base_analysis_contract.py  test_batch_contract.py  test_batch_extraction_contract.py  test_batch_voxelmap_contract.py  test_bids_export_contract.py  test_bids_sidecar_contract.py  test_cli_bidsify_contract.py  test_cli_contract.py  test_data_asset_manager_contract.py  test_error_suggestions_contract.py  test_fetch_contract.py  test_functional_connectome_contract.py  test_functional_network_mapping_contract.py  test_io_contract.py  test_lesion_data_contract.py  test_mask_data_contract.py  test_parcel_aggregation_contract.py  test_pipeline_api.py  test_pipeline_contract.py  test_regional_damage_contract.py  test_result_naming.py  test_result_objects.py  test_space_detection_contract.py  test_space_handling.py  test_structural_connectome_contract.py  test_structural_network_mapping_contract.py  test_template_registry_contract.py  test_transform_cache_contract.py  test_transform_registry_contract.py  test_unified_containers_contract.py  test_voxelmap_space_contract.py
tests/fixtures/: generate_fixtures.py
tests/integration/: test_analysis_discovery.py  test_atlas_integration.py  test_atlas_registry_integration.py  test_batch_backends.py  test_batch_caching.py  test_bids_export.py  test_cli_bids.py  test_fetch_integration.py  test_load_bids_dataset.py  test_load_single_subject.py  test_multi_space_workflow.py  test_nibabel_input.py  test_optimization.py  test_result_workflows.py  test_save_nifti.py  test_space_transformations.py  test_spatial_transformations.py  test_structural_network_mapping_integration.py  test_target_space_transformation.py
tests/unit/: test_4d_atlas_support.py  test_analysis_output.py  test_analysis_output_integration.py  test_analysis_repr.py  test_atlas_by_name.py  test_atlas_label_assignment.py  test_atlas_names_filter.py  test_atlas_registry.py  test_atlas_space_transformation.py  test_atlas_spatial_compatibility.py  test_base_analysis.py  test_batch_input_detection.py  test_bundled_atlases.py  test_connectivity_matrices.py  test_connectivity_matrix_result_api.py  test_coordinate_space.py  test_fnm_pvalue_maps.py  test_functional_network_mapping_batch.py  test_functional_network_mapping_bugfixes.py  test_keys.py  test_lesion_data_validation.py  test_lesion_data_validation.py.bak  test_logging.py  test_mask_data_get_result.py  test_memory_optimization.py  test_parcel_aggregation_enhancements.py  test_parcel_aggregation_return_types.py  test_parcellation_module_refactoring.py  test_provenance.py  test_space_normalization.py  test_structural_network_mapping_resolution.py  test_suggestions.py  test_template_resolution_fix.py  test_templateflow_integration.py  test_tractogram_result.py  test_tutorial_data.py
(+93 files in other folders)
