[build-system]
requires = ["setuptools>=68.0", "setuptools-scm>=8.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lacuna"
dynamic = ["version"]
description = "A scientific Python package for neuroimaging lesion analysis"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Lacuna Contributors"}
]
keywords = ["neuroimaging", "lesion analysis", "brain mapping", "BIDS", "neuroscience"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
]

dependencies = [
    "nibabel>=5.0",
    "numpy>=1.24",
    "scipy>=1.10",
    "nilearn>=0.10",
    "pandas>=2.0",
    "pooch>=1.8",
    "h5py>=3.10",
    "tqdm>=4.66",
    "joblib>=1.3",
    "nitransforms>=23.0",
    "templateflow>=23.0",
]

[project.optional-dependencies]
viz = [
    "matplotlib>=3.7",
]
bids = [
    "pybids>=0.16",
]
preprocess = [
    "antspyx>=0.3",  # Optional: for native space registration
]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "pytest-xdist>=3.3",  # Parallel test execution
    "ruff>=0.1",
    "black>=23.0",
    "mypy>=1.5",
]
doc = [
    "sphinx>=7.0",
    "sphinx-rtd-theme>=1.3",
]
all = [
    "lacuna[viz,bids,preprocess,dev,doc]",
]

[project.urls]
Homepage = "https://github.com/lacuna/lacuna"
Documentation = "https://lacuna.readthedocs.io"
Repository = "https://github.com/lacuna/lacuna"
"Bug Tracker" = "https://github.com/lacuna/lacuna/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools_scm]
write_to = "src/lacuna/_version.py"
version_scheme = "python-simplified-semver"
local_scheme = "no-local-version"

[tool.setuptools.package-data]
"lacuna.data" = [
    "atlases/*.nii.gz", 
    "atlases/*.txt", 
    "atlases/*.md",
    "templates/*.nii.gz",
    "templates/*.md",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=lacuna",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
]
markers = [
    "slow: marks tests as slow (e.g., downloads, heavy computation, >5s)",
    "fast: marks tests as fast (unit tests, <1s each)",
    "integration: marks tests as integration tests (multiple components)",
    "contract: marks tests as contract/API tests (interface validation)",
    "requires_mrtrix: requires MRtrix3 to be installed",
    "requires_templateflow: requires internet access for template downloads",
]
filterwarnings = [
    "error",
    "ignore::UserWarning",
    "ignore::DeprecationWarning",
]

[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/site-packages/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # unused imports in __init__.py are okay

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "nibabel.*",
    "nilearn.*",
    "scipy.*",
    "matplotlib.*",
    "pybids.*",
]
ignore_missing_imports = true
